se crea mockup de nuestro Home

--- a/index.html
+++ b/index.html
@@ -14,28 +14,29 @@
   <title>Terapias Complementarias</title>
 </head>
 <body>
- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#"><i class="fas fa-home"></a>
+ <nav class="navbar navbar-expand-xl navbar-light  nav_color">
+  <a class="navbar-brand" id="nav_ico" href="#"><i class="fas fa-home"></i></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
-      <li class="nav-item active"></i>
-        <a class="nav-link" href="#">mision<span class="sr-only">(current)</span></a>
+      <li class="nav-item active">
+        <a class="nav-link" href="#"><span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Vision</a>
+        <a class="nav-link" id="nav_font" href="#">Vision</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">centros</a>
+        <a class="nav-link" id="nav_font" href="#">centros</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">contactanos</a>
+        <a class="nav-link" id="nav_font" href="#">contactanos</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Compras Online
+        <span id="nav_font">Compras Online</span>
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <a class="dropdown-item" href="#">Action</a>
@@ -47,39 +48,39 @@
   </div>
 </nav>
 <!--fin navbar--> 
-<div class="jumbotron jumbotron-fluid">
+<div class="jumbotron jumbotron-fluid sin-mar">
   <div class="container">
     <h1 class="display-4">Terapias Complementarias</h1>
     <p class="lead">Quilicura</p>
   </div>
 </div>
-<main>
-  <div class="container">
-    <div class="row p-2">
-     <div class="col-md-6">
+<main class="main_color">
+  <div class="container sin-pad">
+    <div class="row">
+     <div class="col-md-6 img_color">
       <img src="https://www.desktopbackground.org/t/2013/10/27/660667_30-wallpapers-sad-boxman-full-hd_1366x768_h.jpg" alt="">
      </div>
-        <div class="col-md-5 pr-6 m-1"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        <div class="col-md-6 parrafo_color"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
-        <div class="col-md-5 p-3 m-2"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        <div class="col-md-6 parrafo_color "> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
-        <div class="col-md-6 ml-5"> 
+        <div class="col-md-6 img_color"> 
         <img src="https://www.desktopbackground.org/t/2013/10/27/660667_30-wallpapers-sad-boxman-full-hd_1366x768_h.jpg" alt="">
      </div>
-        <div class="col-md-6">
+        <div class="col-md-6 img_color">
         <img src="https://www.desktopbackground.org/t/2013/10/27/660667_30-wallpapers-sad-boxman-full-hd_1366x768_h.jpg" alt="">
      </div>
-        <div class="col-md-5 p-3 m-2"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        <div class="col-md-6 parrafo_color "> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
