se agrega media query en archivo css y se finaliza Mockup version movil

--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
   <title>Terapias Complementarias</title>
 </head>
 <body>
+<header>
  <nav class="navbar navbar-expand-xl navbar-light  nav_color">
   <a class="navbar-brand" id="nav_ico" href="#"><i class="fas fa-home"></i></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-
+<!--navbar--> 
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
@@ -36,7 +37,7 @@
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        <span id="nav_font">Compras Online</span>
+          <span id="nav_font">Compras Online</span>
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <a class="dropdown-item" href="#">Action</a>
@@ -47,66 +48,72 @@
     </ul>
   </div>
 </nav>
-<!--fin navbar--> 
-<div class="jumbotron jumbotron-fluid sin-mar">
+<!--fin navbar-->
+<div class="jumbotron jumbotron-fluid fondo col-s-12 sin-mar">
   <div class="container">
     <h1 class="display-4">Terapias Complementarias</h1>
     <p class="lead">Quilicura</p>
   </div>
 </div>
+</header>
 <main class="main_color">
-  <div class="container sin-pad">
+  <div class="container">
     <div class="row">
-     <div class="col-md-6 img_color">
-      <img src="https://www.desktopbackground.org/t/2013/10/27/660667_30-wallpapers-sad-boxman-full-hd_1366x768_h.jpg" alt="">
-     </div>
-        <div class="col-md-6 parrafo_color"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-     quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-     consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-     proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-     </div>
-        <div class="col-md-6 parrafo_color "> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-     quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-     consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-     proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-     </div>
-        <div class="col-md-6 img_color"> 
-        <img src="https://www.desktopbackground.org/t/2013/10/27/660667_30-wallpapers-sad-boxman-full-hd_1366x768_h.jpg" alt="">
-     </div>
-        <div class="col-md-6 img_color">
-        <img src="https://www.desktopbackground.org/t/2013/10/27/660667_30-wallpapers-sad-boxman-full-hd_1366x768_h.jpg" alt="">
-     </div>
-        <div class="col-md-6 parrafo_color "> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-     quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-     consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-     proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-     </div>
+<!--Articulo 1-->
+    <div class="col-md-6 img_color col-s-12">
+    <img src="https://www.desktopbackground.org/t/2013/10/27/660667_30-wallpapers-sad-boxman-full-hd_1366x768_h.jpg" alt="">
     </div>
+    <div class="col-md-6 parrafo_color none"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+     quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+     consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+     proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+   </div>
+<!--Articulo 2-->
+   <div class="col-md-6 parrafo_color none"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+     quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+     consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+     proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+   </div>
+   <div class="col-md-6 img_color col-s-12"> 
+    <img src="https://www.desktopbackground.org/t/2013/10/27/660667_30-wallpapers-sad-boxman-full-hd_1366x768_h.jpg" alt="">
   </div>
+<!--Articulo 3-->
+  <div class="col-md-6 img_color col-s-12">
+    <img src="https://www.desktopbackground.org/t/2013/10/27/660667_30-wallpapers-sad-boxman-full-hd_1366x768_h.jpg" alt="">
+  </div>
+  <div class="col-md-6 parrafo_color none"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+   tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+   quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+   consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+   cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+   proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+ </div>
+</div>
+</div>
 </main>
+<!--footer-->
 <footer>
-  <div class="col-md-12 p-3 text-center footer_color">
-<ul>
-  <li class="d-inline footer_ico"><i class="fab fa-facebook"></i></li>
-  <li class="d-inline footer_ico footer_mr"><i class="fab fa-twitter-square"></i></li>
-  <li class="d-inline footer_ico footer_mr"><i class="fab fa-instagram"></i></li>
-  <li class="d-inline footer_ico footer_mr"><i class="fas fa-share-alt"></i></li>
-</ul>
+  <div class="col-md-12 p-3 text-center footer_color col-s-12">
+    <ul>
+      <li class="d-inline footer_ico"><i class="fab fa-facebook"></i></li>
+      <li class="d-inline footer_ico footer_mr"><i class="fab fa-twitter-square"></i></li>
+      <li class="d-inline footer_ico footer_mr"><i class="fab fa-instagram"></i></li>
+      <li class="d-inline footer_ico footer_mr"><i class="fas fa-share-alt"></i></li>
+    </ul>
   </div>
 </footer>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+<!-- fin footer-->
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+<!-- Font Awesome -->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 
-  </body>
+</body>
 </html>
