se agrega titulo, boton e icono a mockup y se modifica en README

--- a/index.html
+++ b/index.html
@@ -60,10 +60,11 @@
   <div class="container">
     <div class="row">
 <!--Articulo 1-->
-    <div class="col-md-6 img_color col-s-12">
-    <img src="https://www.desktopbackground.org/t/2013/10/27/660667_30-wallpapers-sad-boxman-full-hd_1366x768_h.jpg" alt="">
-    </div>
-    <div class="col-md-6 parrafo_color none"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    <div class="col-md-6 p-4 img_color col-s-12 fondo_fondo text-center">
+    <h1 class="main_font">titulo-1</h1>
+    <a href="https://www.google.cl/"><span class="main_ico"><i class="fas fa-chevron-circle-down"></i></span></a> 
+   </div>
+    <div class="col-md-6 p-4 parrafo_color none"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
@@ -71,21 +72,23 @@
      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
 <!--Articulo 2-->
-   <div class="col-md-6 parrafo_color none"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+   <div class="col-md-6 p-4 parrafo_color none"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
-   <div class="col-md-6 img_color col-s-12"> 
-    <img src="https://www.desktopbackground.org/t/2013/10/27/660667_30-wallpapers-sad-boxman-full-hd_1366x768_h.jpg" alt="">
-  </div>
+   <div class="col-md-6 p-4 img_color col-s-12 fondo_fondo text-center">
+    <h1 class="main_font">titulo-2</h1>
+    <a href=""><span class="main_ico"><i class="fas fa-chevron-circle-down"></i></span></a>
+   </div>
 <!--Articulo 3-->
-  <div class="col-md-6 img_color col-s-12">
-    <img src="https://www.desktopbackground.org/t/2013/10/27/660667_30-wallpapers-sad-boxman-full-hd_1366x768_h.jpg" alt="">
-  </div>
-  <div class="col-md-6 parrafo_color none"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+   <div class="col-md-6 p-4 img_color col-s-12 fondo_fondo text-center">
+   <h1 class="main_font">titulo-3</h1>
+   <a href=""><span class="main_ico"><i class="fas fa-chevron-circle-down"></i></span></a> 
+   </div>
+  <div class="col-md-6 p-4 parrafo_color none"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
