--- a/index.html
+++ b/index.html
@@ -27,10 +27,13 @@
         <a class="nav-link" href="#"><span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="nav_font" href="#">Vision</a>
+        <a class="nav-link" id="nav_font" href="#">TERAPIAS</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="nav_font" href="#">centros</a>
+        <a class="nav-link" id="nav_font" href="#">tisp</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" id="nav_font" href="#">noticias</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" id="nav_font" href="#">contactanos</a>
@@ -40,31 +43,53 @@
           <span id="nav_font">Compras Online</span>
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
+          <a class="dropdown-item" href="https://farmaciasknop.com/shop/">Knop</a>
+          <a class="dropdown-item" href="http://weleda.cl/index.php?module=fr_productos">Welleda</a>
+          <a class="dropdown-item" href="http://www.boticadelalma.cl/carro-de-compras">La Botica del Alma</a>
+          <a class="dropdown-item" href="https://www.katmandu.cl/politica-de-despacho">Katmandú</a>
         </div>
       </li>
     </ul>
   </div>
 </nav>
 <!--fin navbar-->
-<div class="jumbotron jumbotron-fluid fondo col-s-12 sin-mar">
-  <div class="container">
-    <h1 class="display-4">Terapias Complementarias</h1>
-    <p class="lead">Quilicura</p>
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="assets/img/hierba.jpg" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="assets/img/alimentos.jpg" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="assets/img/globulos.jpg" alt="Third slide">
+    </div>
   </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
 </header>
+
 <main class="main_color">
   <div class="container">
     <div class="row">
 <!--Articulo 1-->
-    <div class="col-md-6 p-4 img_color col-s-12 fondo_fondo text-center">
+    <div class="col-12 col-sm-12 col-md-6 col-lg-6 p-4 img_color fondo_fondo text-center">
     <h1 class="main_font">titulo-1</h1>
     <a href="https://www.google.cl/"><span class="main_ico"><i class="fas fa-chevron-circle-down"></i></span></a> 
    </div>
-    <div class="col-md-6 p-4 parrafo_color none"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    <div class="col-12 col-sm-12 col-md-6 col-lg-6 p-4 parrafo_color none"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
@@ -72,23 +97,23 @@
      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
 <!--Articulo 2-->
-   <div class="col-md-6 p-4 parrafo_color none"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+   <div class="col-12 col-sm-12 col-md-6 col-lg-6 p-4 parrafo_color none"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
-   <div class="col-md-6 p-4 img_color col-s-12 fondo_fondo text-center">
+   <div class="col-12 col-sm-12 col-md-6 col-lg-6 p-4 img_color fondo_fondo text-center">
     <h1 class="main_font">titulo-2</h1>
     <a href=""><span class="main_ico"><i class="fas fa-chevron-circle-down"></i></span></a>
    </div>
 <!--Articulo 3-->
-   <div class="col-md-6 p-4 img_color col-s-12 fondo_fondo text-center">
+   <div class="col-12 col-sm-12 col-md-6 col-lg-6 p-4 img_color fondo_fondo text-center">
    <h1 class="main_font">titulo-3</h1>
    <a href=""><span class="main_ico"><i class="fas fa-chevron-circle-down"></i></span></a> 
    </div>
-  <div class="col-md-6 p-4 parrafo_color none"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  <div class="col-12 col-sm-12 col-md-6 col-lg-6 p-4 parrafo_color none"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
@@ -100,12 +125,12 @@
 </main>
 <!--footer-->
 <footer>
-  <div class="col-md-12 p-3 text-center footer_color col-s-12">
+  <div class="col-12 col-sm-12 col-md-12 col-lg-12 p-3 text-center footer_color">
     <ul>
-      <li class="d-inline footer_ico"><i class="fab fa-facebook"></i></li>
-      <li class="d-inline footer_ico footer_mr"><i class="fab fa-twitter-square"></i></li>
-      <li class="d-inline footer_ico footer_mr"><i class="fab fa-instagram"></i></li>
-      <li class="d-inline footer_ico footer_mr"><i class="fas fa-share-alt"></i></li>
+      <li class="d-inline footer_ico"><a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a></li>
+      <li class="d-inline footer_ico footer_mr"><a href="https://twitter.com/?lang=es"><i class="fab fa-twitter-square"></i></a></li>
+      <li class="d-inline footer_ico footer_mr"><a href="https://www.instagram.com/?hl=es-la"><i class="fab fa-instagram"></i></a></li>
+      <li class="d-inline footer_ico footer_mr"><a href=""><i class="fas fa-share-alt"></i></a></li>
     </ul>
   </div>
 </footer>
