--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
         <a class="nav-link" href="#"><span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="nav_font" href="#">TERAPIAS</a>
+        <a class="nav-link" id="nav_font" href="#">Terapias</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="nav_font" href="#">tisp</a>
+        <a class="nav-link" id="nav_font" href="#">Tisp</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="nav_font" href="#">noticias</a>
+        <a class="nav-link" id="nav_font" href="#">Noticias</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="nav_font" href="#">contactanos</a>
+        <a class="nav-link" id="nav_font" href="#">Contacto</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -61,10 +61,10 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="assets/img/hierba.jpg" alt="First slide">
+      <img class="d-block w-100" src="assets/img/globulos.jpg" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="assets/img/alimentos.jpg" alt="Second slide">
+      <img class="d-block w-100" src="assets/img/globulos.jpg" alt="Second slide">
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="assets/img/globulos.jpg" alt="Third slide">
@@ -85,11 +85,14 @@
   <div class="container">
     <div class="row">
 <!--Articulo 1-->
-    <div class="col-12 col-sm-12 col-md-6 col-lg-6 p-4 img_color fondo_fondo text-center">
-    <h1 class="main_font">titulo-1</h1>
+    <div class="col-12 col-sm-8 col-md-3 col-lg-3 p-4 img_color text-center">
+    <img src="assets/img/curcuma.jpg" alt="">
+    </div>
+    <div class="col-12 col-sm-8 col-md-3 col-lg-3 p-4 img_color text-center">
+    <h1 class="main_font">Noticias</h1>
     <a href="https://www.google.cl/"><span class="main_ico"><i class="fas fa-chevron-circle-down"></i></span></a> 
-   </div>
-    <div class="col-12 col-sm-12 col-md-6 col-lg-6 p-4 parrafo_color none"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    </div>
+    <div class="col-12 col-sm-8 col-md-6 col-lg-6 p-4 parrafo_color none"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
@@ -97,23 +100,29 @@
      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
 <!--Articulo 2-->
-   <div class="col-12 col-sm-12 col-md-6 col-lg-6 p-4 parrafo_color none"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+   <div class="col-12 col-sm-8 col-md-6 col-lg-6  parrafo_color none"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
-   <div class="col-12 col-sm-12 col-md-6 col-lg-6 p-4 img_color fondo_fondo text-center">
-    <h1 class="main_font">titulo-2</h1>
-    <a href=""><span class="main_ico"><i class="fas fa-chevron-circle-down"></i></span></a>
-   </div>
+    <div class="col-12 col-sm-8 col-md-3 col-lg-3 img_color text-center">
+    <img src="assets/img/terapias.jpg" alt="">
+    </div>
+    <div class="col-12 col-sm-8 col-md-3 col-lg-3  img_color text-center">
+    <h1 class="main_font">Concejos</h1>
+    <a href="https://www.google.cl/"><span class="main_ico"><i class="fas fa-chevron-circle-down"></i></span></a> 
+    </div>
 <!--Articulo 3-->
-   <div class="col-12 col-sm-12 col-md-6 col-lg-6 p-4 img_color fondo_fondo text-center">
-   <h1 class="main_font">titulo-3</h1>
-   <a href=""><span class="main_ico"><i class="fas fa-chevron-circle-down"></i></span></a> 
-   </div>
-  <div class="col-12 col-sm-12 col-md-6 col-lg-6 p-4 parrafo_color none"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  <div class="col-12 col-sm-8 col-md-3 col-lg-3 p-4  img_color text-center">
+    <img src="assets/img/holistico.jpg" alt="">
+    </div>
+    <div class="col-12 col-sm-8 col-md-3 col-lg-3 img_color text-center">
+    <h1 class="main_font">Terapeutas</h1>
+    <a href="https://www.google.cl/"><span class="main_ico"><i class="fas fa-chevron-circle-down"></i></span></a> 
+    </div>
+  <div class="col-12 col-sm-8 col-md-6 col-lg-6 p-4 parrafo_color none"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
@@ -130,8 +139,7 @@
       <li class="d-inline footer_ico"><a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a></li>
       <li class="d-inline footer_ico footer_mr"><a href="https://twitter.com/?lang=es"><i class="fab fa-twitter-square"></i></a></li>
       <li class="d-inline footer_ico footer_mr"><a href="https://www.instagram.com/?hl=es-la"><i class="fab fa-instagram"></i></a></li>
-      <li class="d-inline footer_ico footer_mr"><a href=""><i class="fas fa-share-alt"></i></a></li>
-    </ul>
+     </ul>
   </div>
 </footer>
 <!-- fin footer-->
