--- a/Contacto.html
+++ b/Contacto.html
@@ -82,43 +82,37 @@
 </header>
 
 <main class="main_color">
+<div class="jumbotron jumbotron-fluid">
   <div class="container">
+    <h1 class="display-4">TERAPEUTAS HOLÍSTICOS</h1>
+    <p class="lead">Conoce a nuestros Teraputas, consultas y reserva de hora con ellos</p>
+  </div>
+</div>
+<div class="container">
     <div class="row">
-<!--Articulo 1-->
-    <div class="col-12 col-sm-8 col-md-3 col-lg-3 p-4 img_color text-center">
-    <img src="assets/img/curcuma.jpg" alt="">
+    <div>
+      Nuestro TERAPEUTAS HOLÍSTICOS, ponen a tu alcance técnicas populares, eficaces y no invasivas con las que puedes brindar salud, bienestar y desarrollo espiritual a los demás. Todas nuestras terapias son avaladas y reconocidas por la Organización Mundial de la Salud, el Gobierno de Chile y forman parte del prestigioso campo de la Medicina Complementaria.
     </div>
-    <div class="col-12 col-sm-8 col-md-3 col-lg-3 p-4 img_color text-center">
-    <h1 class="main_font">Noticias</h1>
-    <a href="Noticias.html"><span class="main_ico"><i class="fas fa-chevron-circle-down"></i></span></a> 
-    </div>
-    <div class="col-12 col-sm-8 col-md-6 col-lg-6 p-4 parrafo_color none"> <h2>Investigadores de la U. de Chile generan nanoemulsión que previene la reaparición y metástasis del cáncer</h2>
-A base de curcumina -proveniente de la cúrcuma-, investigadores del Centro Avanzado de Enfermedades Crónicas (ACCDiS) realizaron experimentos en los que su fórmula inhibió completamente la reaparición y metástasis de tumores en modelos animales de cáncer. Hoy el equipo busca apoyo financiero para realizar los estudios clínicos que permitan continuar evaluando los efectos de esta tecnología en diferentes tipos de cáncer.
-   </div>
-<!--Articulo 2-->
-   <div class="col-12 col-sm-8 col-md-6 col-lg-6  parrafo_color none"> <h2>Usos que desconocías del aceite de almendras</h2>
-¿Sabías que el aceite de almendras puede ayudarte a conseguir un cabello suave y brillante? Además, mejora la salud del cuero cabelludo y elimina la caspa.El aceite de almendras está compuesto por grasas monoinsaturadas, ácido oleico y ácidos linoleicos (como el omega 3 y 6). El color es casi transparente, con toques amarillos o dorados, no tiene un aroma muy fuerte, sino dulce. Se puede emplear para hacer masajes o para uso externo, aunque no está recomendado para el consumo, algunas personas lo suelen utilizar en casos de estreñimiento.
-   </div>
-    <div class="col-12 col-sm-8 col-md-3 col-lg-3 img_color text-center">
-    <img src="assets/img/terapias.jpg" alt="">
-    </div>
-    <div class="col-12 col-sm-8 col-md-3 col-lg-3  img_color text-center">
-    <h1 class="main_font">Concejos</h1>
-    <a href="Consejos.html"><span class="main_ico"><i class="fas fa-chevron-circle-down"></i></span></a> 
-    </div>
-<!--Articulo 3-->
-  <div class="col-12 col-sm-8 col-md-3 col-lg-3 p-4  img_color text-center">
-    <img src="assets/img/holistico.jpg" alt="">
-    </div>
-    <div class="col-12 col-sm-8 col-md-3 col-lg-3 img_color text-center">
-    <h1 class="main_font">Terapeutas</h1>
-    <a href="Contacto.html"><span class="main_ico"><i class="fas fa-chevron-circle-down"></i></span></a> 
-    </div>
-  <div class="col-12 col-sm-8 col-md-6 col-lg-6 p-4 parrafo_color none"><h2>Qué es un Terapeuta Holístico</h2>
-Un terapeuta holístico es un ser lo suficientemente sensible como para entender al ser humano como un todo, mente, cuerpo y espíritu. Los terapeutas manejan técnicas desarrolladas por grandes maestros y hombres de ciencia, y algunos bien preparados, conocen a profundidad cómo funciona la mente y el cuerpo, cómo el organismo actúa y los efectos de diferentes plantas, minerales y comidas en cada sistema que conforma al ser humano.
 
-Otros son capaces de percibir las vibraciones de cada órgano o centro de energía pudiendo detectar lo que en ellos sucede, direccionando la energía a donde de lugar. Hay quienes leen los desequilibrios de cada órgano en el iris, mientras otros reciben guía de seres espirituales para efectuar las sanaciones
- </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </div>
 </div>
 </main>
