se modifica imagen Mockup del README

--- a/Contacto.html
+++ b/Contacto.html
@@ -80,17 +80,16 @@
   </a>
 </div>
 </header>
-
 <main class="main_color">
-<div class="jumbotron jumbotron-fluid">
+<div class="jumbotron jumbotron-fluid main_color">
   <div class="container">
     <h1 class="display-4">TERAPEUTAS HOLÍSTICOS</h1>
     <p class="lead">Conoce a nuestros Teraputas, consultas y reserva de hora con ellos</p>
   </div>
 </div>
-<div class="container">
+<div class="container parrafo_color">
     <div class="row">
-    <div>
+    <div class="p-4">
       Nuestro TERAPEUTAS HOLÍSTICOS, ponen a tu alcance técnicas populares, eficaces y no invasivas con las que puedes brindar salud, bienestar y desarrollo espiritual a los demás. Todas nuestras terapias son avaladas y reconocidas por la Organización Mundial de la Salud, el Gobierno de Chile y forman parte del prestigioso campo de la Medicina Complementaria.
     </div>
     <!--Terapeuta01-->
@@ -100,11 +99,11 @@
    <h1>Naturopata</h1>
 </div>
    </div>
-   <div class="col-12 col-sm-10 col-md-2 col-lg-2"></div>
-   <form class="col-12 col-sm-10 col-md-6 col-lg-6">
+   <div class="col-12 col-sm-10 col-md-2 col-lg-2 "></div>
+   <form class="col-12 col-sm-10 col-md-6 col-lg-6 ">
    <div class="form-group">
     <label for="exampleInputEmail1">Nombres / Apellidos</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Nombre....">
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Nombre">
   </div>
   <div class="form-group">
     <label for="exampleInputPassword1">Telefono</label>
