--- a/Noticias.html
+++ b/Noticias.html
@@ -15,11 +15,11 @@
 </head>
 <body>
 <header>
+  <!--navbar-->
  <nav class="navbar navbar-expand-xl navbar-light  nav_color">
   <a class="navbar-brand" id="nav_ico" href="index.html"><i class="fas fa-home"></i></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-<!--navbar--> 
-    <span class="navbar-toggler-icon"></span>
+  <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
@@ -61,13 +61,25 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="assets/img/globulos.jpg" alt="First slide">
+      <img class="d-block w-100" src="assets/img/globulos.jpg" alt="First slide"> 
+    <div class="carousel-caption d-none d-md-block">
+    <h1>TERAPIAS COMPLEMENTARIAS</h1>
+    <h4>Quilicura</h4>
+    </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="assets/img/globulos.jpg" alt="Second slide">
+      <img class="d-block w-100" src="assets/img/hierba.jpg" alt="Second slide">
+        <div class="carousel-caption d-none d-md-block">
+    <h1>TERAPIAS COMPLEMENTARIAS</h1>
+    <h4>Quilicura</h4>
+    </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="assets/img/globulos.jpg" alt="Third slide">
+      <img class="d-block w-100" src="assets/img/comida.jpg" alt="Third slide">
+        <div class="carousel-caption d-none d-md-block">
+    <h1>TERAPIAS COMPLEMENTARIAS</h1>
+    <h4>Quilicura</h4>
+    </div>
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -86,7 +98,7 @@
 </main>
 <!--footer-->
 <footer>
-  <div class="col-12 col-sm-12 col-md-12 col-lg-12 p-3 text-center footer_color">
+  <div class="col-12 col-sm-12 col-md-12 col-lg-12 text-center footer_color">
     <ul>
       <li class="d-inline footer_ico"><a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a></li>
       <li class="d-inline footer_ico footer_mr"><a href="https://twitter.com/?lang=es"><i class="fab fa-twitter-square"></i></a></li>
