--- a/Terapias.html
+++ b/Terapias.html
@@ -61,13 +61,25 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="assets/img/globulos.jpg" alt="First slide">
+      <img class="d-block w-100" src="assets/img/globulos.jpg" alt="First slide"> 
+    <div class="carousel-caption d-none d-md-block">
+    <h1>TERAPIAS COMPLEMENTARIAS</h1>
+    <h4>Quilicura</h4>
+    </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="assets/img/globulos.jpg" alt="Second slide">
+      <img class="d-block w-100" src="assets/img/hierba.jpg" alt="Second slide">
+        <div class="carousel-caption d-none d-md-block">
+    <h1>TERAPIAS COMPLEMENTARIAS</h1>
+    <h4>Quilicura</h4>
+    </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="assets/img/globulos.jpg" alt="Third slide">
+      <img class="d-block w-100" src="assets/img/comida.jpg" alt="Third slide">
+        <div class="carousel-caption d-none d-md-block">
+    <h1>TERAPIAS COMPLEMENTARIAS</h1>
+    <h4>Quilicura</h4>
+    </div>
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -86,7 +98,7 @@
 </main>
 <!--footer-->
 <footer>
-  <div class="col-12 col-sm-12 col-md-12 col-lg-12 p-3 text-center footer_color">
+  <div class="col-12 col-sm-12 col-md-12 col-lg-12 text-center footer_color">
     <ul>
       <li class="d-inline footer_ico"><a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a></li>
       <li class="d-inline footer_ico footer_mr"><a href="https://twitter.com/?lang=es"><i class="fab fa-twitter-square"></i></a></li>
