--- a/Contacto.html
+++ b/Contacto.html
@@ -129,8 +129,30 @@
 </form>
 </div>
   <!--Terapeuta01-->
-    <div>
-      
+    <div class="container">
+
+           <div class="row">
+    <div class="col-12 col-sm-10 col-md-6 col-lg-6 p-4 m-5 text-center">
+   <img src="assets/img/terapeuta.jpg" alt="">
+   <h1>Naturopata</h1>
+</div>
+   </div>
+   <form class="col-12 col-sm-10 col-md-6 col-lg-6 ">
+   <div class="form-group">
+    <label for="exampleInputEmail1">Nombres / Apellidos</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Nombre">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Telefono</label>
+    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="+569 9999 9999">
+  </div>
+    <div class="form-group">
+    <label for="exampleInputPassword1">Correo</label>
+    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="email">
+  </div>
+ <button type="submit" class="btn btn-primary">Continuar</button>
+</form>
+</div>
     </div>
     <!--Terapeuta01-->
     <div>
